fix mainmenu z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -473,7 +473,7 @@ footer {
     background: url(../../assets/img/home/ellipse1.png)no-repeat;
     position: fixed;
     background-size: 460px;
-    z-index: 111;
+    z-index: 0;
     width: 100%;
     height: 100%;
     left: 0;
